# flask-template

./: README.md  app.py  pyproject.toml
models/: database.py
routes/: __init__.py
static/: generic-form.css
templates/: form-macro.html  layout.html
